# Phoe

./: .gitignore  argv.go  def.go  environment.go  gate_test.go  go.mod  goop.go  interpreter.go  main.go  main_test.go  parser.go  runtime.go  sig_impl_return_test.go  snakecase  spec.go  stdDependencies.go
Doc/: Features.md  Language.md  Notes.md  Scratch.md
Doc/PlanV1/: Coordination.md  DeclImplSplit.md  Discriminants.md  Effects.md  GradualTyping.md  ObjectModel.md  Syntax.md  Traits.md  TypeSignatures.md
cmd/pho-lint/: main.go
cmd/pho-lsp/: handlers_extra.go  handlers_features.go  handlers_format.go  handlers_nav.go  jsonrpc.go  jsonrpc_test.go  log.go  main.go  protocol.go
main/: main.lth
pkg/annot/: annot.go  annot_phl_test.go  annot_test.go  reload_test.go  stash_test.go
pkg/ast/: ast.go
pkg/builtins/: apostrophe_test.go  arith.go  atom.go  atom_test.go  atomtype_test.go  bench_test.go  block_test.go  brackets_phase4_test.go  builtinmod.go  builtins_test.go  clause.go  clause_test.go  coll.go  contextdo_test.go  ctrl.go  decl.go  declname_test.go  (+53 more)
script/: rps.pho
testdata/: bad_spread.pho  body_span.pho  clean.pho  import_twice.pho  macro_err.pho  macro_nested_err.pho  multi_err.pho  optional.pho  or_default.pho  parse_err.pho  recursion.pho  runtime_err.pho  sig_impl_none.pho  surplus_arity.pho  trace.pho
tooling/zed-pho/: .gitignore  Cargo.toml  README.md  extension.toml  extension.wasm
tooling/zed-pho/languages/pho/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  locals.scm  outline.scm
tooling/zed-pho/src/: pho.rs
(+214 files in other folders)
